# SAT-Solver

./: .gitignore  CONSIGNES.md  LICENSE  Makefile  README.md  RENDU  dpll_solver.opam  dune-project
dpll-en-ocaml-main/: .gitignore  README.md
examples/SAT/: coloriage.cnf  dependances.cnf  exemple-7-8.cnf  hamiltonian.cnf  ii8a2.cnf  kclique.cnf
examples/UNSAT/: grammaire.cnf
lib/: dimacs.ml  dimacs.mli  dpll.ml  dpll.mli  dune  logger.ml  logger.mli  sat_types.ml  sat_types.mli  sequent_prover.ml  sequent_prover.mli
test/: dpll_test.ml  dune  sequent_prover_test.ml  test_dpll_solver.ml
